--- a/phploy.ini
+++ b/phploy.ini
@@ -1,13 +1,13 @@
 ; NOTE: If non-alphanumeric characters are present, enclose in value in quotes.
 
 [production]
-scheme = sftp
+scheme = ftp
 passive = true
 branch = "master"
-user = sammy@tsobu.co.ke
-pass = Cyberhopper123
-host = "lenana.webhostultima.com:2222"
-path = /var/www/html/clinic
+user = tsobucok
+pass = pz82Eok30B
+host = "tsobu.co.ke"
+path = /spa
 port = 21
 permissions = 0700
 directoryPerm = 0775
@@ -19,7 +19,7 @@ exclude[] = 'tests/*'
 ;exclude[] = 'migrations/*'
 ;exclude[] = 'mygenerators/*'
 exclude[] = '*.ini'
-exclude[] = 'index.php'
+;exclude[] = 'index.php'
 ;purge[] = "assets/"
 ;purge[] = "vendor/"
 logger = on
