--- a/api/.htaccess
+++ b/api/.htaccess
@@ -1,11 +1,8 @@
-Options +FollowSymLinks
-IndexIgnore */*
-
+Options -Indexes
 RewriteEngine on
 
-# if a directory or a file exists, use it directly
+# If a directory or a file exists, use it directly
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-
-# otherwise forward it to index.php
+# Otherwise forward it to index.php
 RewriteRule . index.php
