Added login functionality

--- a/phploy.ini
+++ b/phploy.ini
@@ -19,6 +19,7 @@ exclude[] = 'tests/*'
 ;exclude[] = 'migrations/*'
 ;exclude[] = 'mygenerators/*'
 exclude[] = '*.ini'
+exclude[] = '*.log'
 ;exclude[] = 'index.php'
 ;purge[] = "assets/"
 ;purge[] = "vendor/"
