--- a/phploy.ini
+++ b/phploy.ini
@@ -20,7 +20,7 @@ exclude[] = 'tests/*'
 ;exclude[] = 'mygenerators/*'
 exclude[] = '*.ini'
 exclude[] = '*.log'
-;exclude[] = 'index.php'
+exclude[] = 'index.php'
 ;purge[] = "assets/"
 ;purge[] = "vendor/"
 logger = on
