--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "kartik-v/yii2-widget-depdrop": "*",
         "kartik-v/yii2-detail-view": "*",
         "kartik-v/yii2-widgets": "^3.4",
-        "kartik-v/yii2-dialog": "*"
+        "kartik-v/yii2-dialog": "*",
+        "kartik-v/yii2-date-range": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
