--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "kartik-v/yii2-detail-view": "*",
         "kartik-v/yii2-widgets": "^3.4",
         "kartik-v/yii2-dialog": "*",
-        "kartik-v/yii2-date-range": "*"
+        "kartik-v/yii2-date-range": "*",
+        "kartik-v/yii2-export": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
