Added help PDF document

--- a/phploy.ini
+++ b/phploy.ini
@@ -24,3 +24,28 @@ exclude[] = 'index.php'
 ;purge[] = "assets/"
 ;purge[] = "vendor/"
 logger = on
+
+[failover]
+scheme = ftp
+passive = true
+branch = "master"
+user = tsobucok
+pass = pz82Eok30B
+host = "tsobu.co.ke"
+path = /public_html/spa
+port = 21
+permissions = 0700
+directoryPerm = 0775
+;exclude[] = 'config/oracle_conn.php' ;db connection file
+exclude[] = 'assets/'
+;include[] = 'vendor' ;Include the vendor folder in the upload
+exclude[] = 'tests/*'
+;exclude[] = 'runtime/*'
+;exclude[] = 'migrations/*'
+;exclude[] = 'mygenerators/*'
+exclude[] = '*.ini'
+exclude[] = '*.log'
+exclude[] = 'index.php'
+;purge[] = "assets/"
+;purge[] = "vendor/"
+logger = on
