--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,9 @@
         "kartik-v/yii2-widgets": "^3.4",
         "kartik-v/yii2-dialog": "*",
         "kartik-v/yii2-date-range": "*",
-        "kartik-v/yii2-export": "*"
+        "kartik-v/yii2-export": "*",
+
+        "rmrevin/yii2-fontawesome": "^2.17"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
