--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "kartik-v/yii2-date-range": "*",
         "kartik-v/yii2-export": "*",
 
-        "rmrevin/yii2-fontawesome": "^2.17"
+        "rmrevin/yii2-fontawesome": "^2.17",
+        "understeam/yii2-fcm": "~0.1"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
